--- a/src/index.html
+++ b/src/index.html
@@ -1,48 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="./style.css" />
+    <title>Complete Intro to React</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="./style.css">
-  <title>Complete Intro to React</title>
-</head>
-
-<body>
-  <div id="root">not rendered</div>
-  <script src="https://unpkg.com/react@16.4.1/umd/react.development.js"></script>
-  <script src="https://unpkg.com/react-dom@16.4.1/umd/react-dom.development.js"></script>
-  <script>
-    const Pet = props => {
-      return React.createElement("div", {}, [
-        React.createElement("h1", {}, props.name),
-        React.createElement("h2", {}, props.animal),
-        React.createElement("h2", {}, props.breed)
-      ]);
-    };
-
-    class App extends React.Component {
-      render() {
-        return React.createElement("div", {}, [
-          React.createElement("h1", {}, "CITR"),
-          React.createElement(Pet, {
-            name: "Gizzer",
-            animal: "Dog",
-            breed: "Pug"
-          }),
-          React.createElement(Pet, {
-            name: "Frank",
-            animal: "Cat",
-            breed: "Tortiseshell"
-          }),
-          React.createElement(Pet, { name: "Bessie", animal: "Dog", breed: "Labrador" })
-        ]);
-      }
-    }
-
-    ReactDOM.render(React.createElement(App), document.getElementById("root"));
-  </script>
-</body>
-
+  <body>
+    <div id="root">not rendered</div>
+    <script src="https://unpkg.com/react@16.4.1/umd/react.development.js"></script>
+    <script src="https://unpkg.com/react-dom@16.4.1/umd/react-dom.development.js"></script>
+    <script src="./app.js"></script>
+  </body>
 </html>
